Change log
==========

The releases are numbered according to the `Semantic Versioning Specification`_.

v0.1.0-a_ (2014-8-7) -- Initial pre-release


.. _v0.1.0-a: https://github.com/kdavies4/natu/archive/v0.1.0-a.zip

.. _Semantic Versioning Specification: http://semver.org