@@ -20,7 +20,7 @@ before_install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update conda
   - conda info -a # Useful for debugging issues with conda
-  - conda create -n test-environment numpy
+  - conda create -n test-environment setuptools numpy
   # 7/2/14: python=3.4 doesn't work, but conda currently defaults to 3.4.1
   # anyway if version 3 is installed (see conda info above) and 2.7.7 otherwise.
   - source activate test-environment
