@@ -115,10 +115,10 @@ da
 weber
 acosh
 de
-df
 au
-Bq
+df
 eb
+Bq
 html
 thermochemical
 ec
@@ -127,10 +127,11 @@ cP
 fb
 fabs
 kPa
-dm
 fc
+dm
 Wien
 statampere
+fd
 fe
 dyne
 fm
@@ -142,8 +143,8 @@ kA
 statWb
 mho
 mmHg
-Gy
 io
+Gy
 fromQuantity
 CoherentRelations
 Scalability
@@ -155,15 +156,15 @@ maxwell
 ltypes
 decametre
 lm
-ln
 nd
+ln
 util
 statcoulomb
 Oe
 mod
 barrie
-pc
 nm
+pc
 abcoloumb
 lx
 ly
@@ -171,19 +172,19 @@ np
 lumen
 deciam
 modf
-mol
 Pag
-ns
+mol
 Mx
+ns
 google
 copysign
 arcsecond
 getitem
 filenames
 abA
-darcy
 abC
 abc
+darcy
 si
 py
 LaTeX
@@ -236,7 +237,6 @@ fnames
 pre
 MERCHANTABILITY
 lgamma
-cef
 ppq
 ceil
 LambdaUnit
