@@ -1,6 +1,6 @@
 <h3>Download</h3>
   <ul>
     <li><a itemprop="downloadUrl"
-           href="https://pypi.python.org/packages/source/M/natu/natu-.tar.gz"
+           href="https://pypi.python.org/packages/source/M/natu/natu-v0.1.0-a.tar.gz"
            rel="nofollow">Latest version<br>(v0.1.0-a, 2014-08-06)</a></li>
   </ul>
