@@ -668,7 +668,7 @@
         "    natu.groups.length - Aliases for constants and units of length, with support for prefixes\n",
         "\n",
         "FILE\n",
-        "    /usr/local/lib/python2.7/dist-packages/natu-0-py2.7.egg/natu/groups/length.py\n",
+        "    /usr/local/lib/python2.7/dist-packages/natu-0.1.0_a-py2.7.egg/natu/groups/length.py\n",
         "\n",
         "DESCRIPTION\n",
         "    Default contents:\n",
@@ -889,7 +889,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.9144 m\n"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -933,13 +942,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 28,
        "text": [
         "ScalarUnit(1.63871e-05, 'L3', 'inch3', False) (inch3)"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -965,7 +974,7 @@
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -985,7 +994,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -1011,7 +1020,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -1049,7 +1058,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -1077,7 +1086,7 @@
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 34
     }
    ],
    "metadata": {}
